# Z-remote

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.placeholder.yml
client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
client/scripts/: build.ps1  dev.ps1
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/css/: style.css
client/src/js/: app.js
client/src/js/modules/: api.js  config.js  files.js  session.js  state.js  ui.js  ws.js
server/: .env.example  Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/auth/: device_handler.go  handler.go  jwt.go  jwt_test.go  middleware.go  password.go  password_test.go  ratelimit.go  service.go
server/internal/config/: config.go  dotenv.go
server/internal/devices/: handler.go  service.go  service_test.go
server/internal/files/: handler.go  service.go
server/internal/http/: context.go  middleware.go  response.go  router.go
server/internal/models/: models.go
server/internal/sessions/: handler.go  service.go  service_test.go
server/internal/storage/: db.go
server/internal/ws/: handler.go  hub.go  hub_test.go  messages.go
server/migrations/: 001_init.sql  002_device_identity.sql  002_file_transfers_target_save_path.sql
server/scripts/: build.ps1  dev.ps1  seed.ps1
server/scripts/seed/: main.go
