[package]
name = "remote-access-mvp-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "remote_access_mvp_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hostname = "0.4"
mac_address = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
