[package]
name = "remote-access-mvp-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "remote_access_mvp_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
enigo = "0.2"
hostname = "0.4"
image = "0.24"
mac_address = "1"
rfd = "0.14"
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
